--- a/wss/package.json
+++ b/wss/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
+    "redis": "^4.6.14",
     "socket.io": "^4.7.5"
   }
 }
