--- a/wss/package.json
+++ b/wss/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "mongoose": "^8.4.1",
     "redis": "^4.6.14",
     "socket.io": "^4.7.5"
