--- a/db-streams/package.json
+++ b/db-streams/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "kafkajs": "^2.2.4",
     "mongoose": "^8.4.1"
   }
